--- a/docs/css/labelmine.css
+++ b/docs/css/labelmine.css
@@ -520,7 +520,7 @@ header.nav{ position:sticky; top:0; z-index:100; height:var(--nav-h); background
   z-index:5600;
 }
 
-.cm-stage{ position:relative; }   ㄴ
+.cm-stage{ position:relative; } 
 
 /* 공통 버튼 */
 .crop-btn{
